# DesktopAI

./: COPY_TO_NEW_PC.md  INSTALL.bat  QUICK_START.md  README.md  START.bat  main.py  pyproject.toml  replit.md  setup.py  uv.lock.py
config/: settings.ini
data/: commands.txt  processed_commands.txt  rules.txt
src/: automation_executor.py  command_processor.py  config_manager.py  llm_interface.py  screen_capture.py  utils.py
