[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "config-manager>=1.1.2",
    "configparser>=7.2.0",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "requests>=2.32.5",
]
